; ModuleID = '/home/carl/AnghaBench/linux/drivers/staging/comedi/drivers/extr_pcl816.c_pcl816_ai_setup_dma.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/staging/comedi/drivers/extr_pcl816.c_pcl816_ai_setup_dma.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.comedi_device = type { %struct.pcl816_private* }
%struct.pcl816_private = type { %struct.comedi_isadma* }
%struct.comedi_isadma = type { i64, i32, %struct.comedi_isadma_desc* }
%struct.comedi_isadma_desc = type { i32, i32 }
%struct.comedi_subdevice = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.comedi_device*, %struct.comedi_subdevice*, i32)* @pcl816_ai_setup_dma to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @pcl816_ai_setup_dma(%struct.comedi_device* %0, %struct.comedi_subdevice* %1, i32 %2) #0 {
  %4 = alloca %struct.comedi_device*, align 8
  %5 = alloca %struct.comedi_subdevice*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.pcl816_private*, align 8
  %8 = alloca %struct.comedi_isadma*, align 8
  %9 = alloca %struct.comedi_isadma_desc*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  store %struct.comedi_device* %0, %struct.comedi_device** %4, align 8
  store %struct.comedi_subdevice* %1, %struct.comedi_subdevice** %5, align 8
  store i32 %2, i32* %6, align 4
  %12 = load %struct.comedi_device*, %struct.comedi_device** %4, align 8
  %13 = getelementptr inbounds %struct.comedi_device, %struct.comedi_device* %12, i32 0, i32 0
  %14 = load %struct.pcl816_private*, %struct.pcl816_private** %13, align 8
  store %struct.pcl816_private* %14, %struct.pcl816_private** %7, align 8
  %15 = load %struct.pcl816_private*, %struct.pcl816_private** %7, align 8
  %16 = getelementptr inbounds %struct.pcl816_private, %struct.pcl816_private* %15, i32 0, i32 0
  %17 = load %struct.comedi_isadma*, %struct.comedi_isadma** %16, align 8
  store %struct.comedi_isadma* %17, %struct.comedi_isadma** %8, align 8
  %18 = load %struct.comedi_isadma*, %struct.comedi_isadma** %8, align 8
  %19 = getelementptr inbounds %struct.comedi_isadma, %struct.comedi_isadma* %18, i32 0, i32 2
  %20 = load %struct.comedi_isadma_desc*, %struct.comedi_isadma_desc** %19, align 8
  %21 = load %struct.comedi_isadma*, %struct.comedi_isadma** %8, align 8
  %22 = getelementptr inbounds %struct.comedi_isadma, %struct.comedi_isadma* %21, i32 0, i32 0
  %23 = load i64, i64* %22, align 8
  %24 = getelementptr inbounds %struct.comedi_isadma_desc, %struct.comedi_isadma_desc* %20, i64 %23
  store %struct.comedi_isadma_desc* %24, %struct.comedi_isadma_desc** %9, align 8
  %25 = load %struct.comedi_subdevice*, %struct.comedi_subdevice** %5, align 8
  %26 = load %struct.comedi_isadma_desc*, %struct.comedi_isadma_desc** %9, align 8
  %27 = getelementptr inbounds %struct.comedi_isadma_desc, %struct.comedi_isadma_desc* %26, i32 0, i32 1
  %28 = load i32, i32* %27, align 4
  %29 = call i32 @comedi_bytes_to_samples(%struct.comedi_subdevice* %25, i32 %28)
  store i32 %29, i32* %10, align 4
  %30 = load %struct.comedi_isadma*, %struct.comedi_isadma** %8, align 8
  %31 = getelementptr inbounds %struct.comedi_isadma, %struct.comedi_isadma* %30, i32 0, i32 1
  %32 = load i32, i32* %31, align 8
  %33 = call i32 @comedi_isadma_disable(i32 %32)
  %34 = load %struct.comedi_subdevice*, %struct.comedi_subdevice** %5, align 8
  %35 = load i32, i32* %10, align 4
  %36 = load i32, i32* %6, align 4
  %37 = add i32 %35, %36
  %38 = call i32 @comedi_nsamples_left(%struct.comedi_subdevice* %34, i32 %37)
  store i32 %38, i32* %11, align 4
  %39 = load i32, i32* %11, align 4
  %40 = load i32, i32* %6, align 4
  %41 = icmp ugt i32 %39, %40
  br i1 %41, label %42, label %53

42:                                               ; preds = %3
  %43 = load i32, i32* %6, align 4
  %44 = load i32, i32* %11, align 4
  %45 = sub i32 %44, %43
  store i32 %45, i32* %11, align 4
  %46 = load %struct.comedi_subdevice*, %struct.comedi_subdevice** %5, align 8
  %47 = load i32, i32* %11, align 4
  %48 = call i32 @comedi_samples_to_bytes(%struct.comedi_subdevice* %46, i32 %47)
  %49 = load %struct.comedi_isadma_desc*, %struct.comedi_isadma_desc** %9, align 8
  %50 = getelementptr inbounds %struct.comedi_isadma_desc, %struct.comedi_isadma_desc* %49, i32 0, i32 0
  store i32 %48, i32* %50, align 4
  %51 = load %struct.comedi_isadma_desc*, %struct.comedi_isadma_desc** %9, align 8
  %52 = call i32 @comedi_isadma_program(%struct.comedi_isadma_desc* %51)
  br label %53

53:                                               ; preds = %42, %3
  ret void
}

declare dso_local i32 @comedi_bytes_to_samples(%struct.comedi_subdevice*, i32) #1

declare dso_local i32 @comedi_isadma_disable(i32) #1

declare dso_local i32 @comedi_nsamples_left(%struct.comedi_subdevice*, i32) #1

declare dso_local i32 @comedi_samples_to_bytes(%struct.comedi_subdevice*, i32) #1

declare dso_local i32 @comedi_isadma_program(%struct.comedi_isadma_desc*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
